force-app/main/default/objects/Assessment_Object_Mapping__mdt/Assessment_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps parent objects to their child objects for lookup relationships in Assessment module</description>
    <label>Assessment Object Mapping</label>
    <pluralLabel>Assessment Object Mappings</pluralLabel>
</CustomObject>