force-app/main/default/objects/Assessment_Object_Mapping__mdt/fields/Child_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API__c</fullName>
    <description>API name of the child object that links parent to lookup target (e.g., caresp__Client_Referral__c)</description>
    <label>Child Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>