force-app/main/default/objects/Assessment_Object_Mapping__mdt/fields/Child_Object_API_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Subscriber__c</fullName>
    <description>API name of the child object that links parent to lookup target (e.g., caresp__Client_Referral__c). Subscriber editable field.</description>
    <label>Child Object API (Subscriber)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>