force-app/main/default/objects/Assessment_Object_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable/disable this object mapping</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>