force-app/main/default/objects/Assessment_Object_Mapping__mdt/fields/Is_Active_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Subscriber__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable/disable this object mapping. Subscriber editable field.</description>
    <label>Is Active (Subscriber Editable)</label>
    <type>Checkbox</type>
</CustomField>