force-app/main/default/objects/Assessment_Object_Mapping__mdt/fields/Parent_Lookup_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lookup_Field_API__c</fullName>
    <description>Lookup field API name on child object pointing to parent (e.g., caresp__Referral__c)</description>
    <label>Parent Lookup Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>