force-app/main/default/objects/Assessment_Object_Mapping__mdt/fields/Parent_Lookup_Field_API_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lookup_Field_API_Subscriber__c</fullName>
    <description>Lookup field API name on child object pointing to parent (e.g., caresp__Referral__c). Subscriber editable field.</description>
    <label>Parent Lookup Field (Subscriber)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>