force-app/main/default/objects/Assessment_Object_Mapping__mdt/fields/Parent_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_API__c</fullName>
    <description>API name of the parent object (e.g., caresp__Referral__c, caresp__Assigned_Service__c)</description>
    <label>Parent Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>