force-app/main/default/objects/Assessment_Object_Mapping__mdt/fields/Related_Field_API_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Related_Field_API_Subscriber__c</fullName>
    <description>Optional: If Source Filter Field is a lookup, this specifies which field on the related object to use for comparison (e.g., Service_Name__c, Name). Defaults to Name if not specified. Subscriber editable field.</description>
    <label>Related Field API (Subscriber)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>