force-app/main/default/objects/Assessment_Object_Mapping__mdt/fields/Source_Filter_Field_API_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Source_Filter_Field_API_Subscriber__c</fullName>
    <description>Optional: Field API name on parent object containing value to match against Assessment filter field (defaults to first filter field if not specified). Subscriber editable field.</description>
    <label>Source Filter Field (Subscriber)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>